k8s/redis/20-redis-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: hospital
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
    - name: sentinel
      port: 26379
      targetPort: sentinel
    - name: metrics
      port: 9121
      targetPort: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: redis-primary
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: primary
    app.kubernetes.io/part-of: hospital
spec:
  selector:
    statefulset.kubernetes.io/pod-name: redis-0
  ports:
    - name: redis
      port: 6379
      targetPort: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-sentinel
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: sentinel
    app.kubernetes.io/part-of: hospital
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: sentinel
      port: 26379
      targetPort: sentinel
---
apiVersion: v1
kind: Service
metadata:
  name: redis-metrics
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: metrics
    app.kubernetes.io/part-of: hospital
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: metrics
      port: 9121
      targetPort: metrics
